--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Assessment for blox front-end position",
   "repository": "git@github.com:jacob3/bloxassessment.git",
   "author": "Jacob de Graaf <contact@jacobdegraaf.nl>",
+  "engines": {
+    "npm": ">=8.3.1",
+    "node": ">=16.14.0"
+  },
   "dependencies": {
     "axios": "^0.24.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.3",
